# doh

./: .gitignore  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  pyproject.toml  style.css  temp.csv  vite.config.js
.github/workflows/: ci.yml  deploy.yml  ingest-issue.yml  python-ci.yml
docs/: DESIGN_SPEC.md  PRD.md  PRODUCT.md  SCHEMA.md  TECH_SPEC.md
public/data/: philosophy.json  questions.json  science.json  science_tech.json  technology.json
scripts/: ingest_questions.py  schema.py  smoke.js
