[project]
name = "doh"
version = "0.1.0"
description = "Spark an argument. Realize you're wrong. Say the word."
requires-python = ">=3.10,<3.14"
dependencies = [
    "pandas>=2.2.3",
    "pandera>=0.32.0",
    "numpy>=1.22.4",
]

[project.urls]
homepage = "https://github.com/Asifdotexe/doh"

[project.scripts]
yoink_questions = "scripts.ingest_questions:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
